Aggiunta cartella images

--- a/yourPCBuddy/src/main/WebContent/index.html
+++ b/yourPCBuddy/src/main/WebContent/index.html
@@ -8,7 +8,7 @@
 <div class="header">
 <h1>yourPCBuddy</h1>
 <img src="./Images/PCBuddy.jpg" alt="logo sito">
-<p>Benvenuti su yourPCBuddy</p>
+<p>Benvenuti su yourPCBuddy ole</p>
 </div>
 
 
